--- a/scss/vars.scss
+++ b/scss/vars.scss
@@ -4,10 +4,15 @@ html, body { font-family: "Jost", sans-serif; width: 100%; height: 100%; cursor:
 ul, ul li { list-style: none; }
 a { cursor: pointer; text-decoration: none; font-size: inherit; font-weight: inherit; }
 
-$ui-desktop-min: "(min-width: 1120px)";
-$ui-desktop-interval: "screen and (min-width: 1120px)";
+$ui-desktop-min: "(min-width: 1560px)";
+$ui-desktop-interval: "screen and (min-width: 1560px)";
+//$ui-desktop-interval: "screen and (min-width: 1120px)";
 $ui-header: "(min-width: 1440px)";
 $ui-header-interval: "(max-width: 1439px) and (min-width: 720px)";
+
+$ui-notebook-min: "(min-width: 1120px)";
+$ui-notebook: "(max-width: 1559px)";
+$ui-notebook-interval: "screen and (max-width: 1559px) and (min-width: 1120px)";
 
 $ui-tablet: "(max-width: 1119px)";
 $ui-tablet-min: "(min-width: 720px)";
@@ -164,9 +169,16 @@ section {
       transition: ease 0.2s;
     }
   }
-  width: clamp(288px, 15vw, 253px);
+  //width: clamp(288px, 15vw, 253px);
+  //margin: 12px;
   padding: 24px;
   border-radius: 16px;
+  @media #{$ui-notebook-interval} {
+    width: clamp(288px, 15vw, 253px);
+  }
+  @media #{$ui-desktop-interval} {
+    width: calc((100% - 96px) / 5);
+  }
 
   .cardTitle {
     margin-top: 0;
